# phosphor-leptos

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: foo.rs  lib.rs
src/icons/: acorn.rs  address_book.rs  address_book_tabs.rs  air_traffic_control.rs  airplane.rs  airplane_in_flight.rs  airplane_landing.rs  airplane_takeoff.rs  airplane_taxiing.rs  airplane_tilt.rs  airplay.rs  alarm.rs  alien.rs  align_bottom.rs  align_bottom_simple.rs  align_center_horizontal.rs  align_center_horizontal_simple.rs  align_center_vertical.rs  align_center_vertical_simple.rs  align_left.rs  align_left_simple.rs  align_right.rs  align_right_simple.rs  align_top.rs  align_top_simple.rs  amazon_logo.rs  ambulance.rs  anchor.rs  anchor_simple.rs  android_logo.rs  angle.rs  angular_logo.rs  aperture.rs  app_store_logo.rs  app_window.rs  apple_logo.rs  apple_podcasts_logo.rs  approximate_equals.rs  archive.rs  archive_box.rs  (+1479 more)
xtask/: Cargo.toml
xtask/src/: main.rs  update.rs
