[package]
name = "phosphor-leptos"
version = "0.1.0"
description = "phosphor icons for leptos"
authors = ["Søren H. Hansen"]
readme = "README.md"
repository = "https://github.com/SorenHolstHansen/phosphor-leptos"
keywords = ["icons", "leptos", "phosphor"]
edition = "2021"
license = "MIT"
exclude = ["/core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.5.1"

[workspace]
members = ["xtask"]
