[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.2"
convert_case = "0.6.0"
clap = { version = "4.4.10", features = ["derive"] }
prettyplease = { version = "0.2.20", default-features = false }
quote = "1.0.36"
syn = { version = "2.0.66", default-features = false, features = [
  "parsing",
  "full",
] }
proc-macro2 = { version = "1.0.84", default-features = false }
